<resources>
    <string name="app_name">MadLibs</string>
    <string name="heading">MadLibs</string>
    <string name="vacAdj1">Adjective</string>
    <string name="vacAdj2">Adjective</string>
    <string name="vacAdj3">Adjective</string>
    <string name="vacNoun1">Noun</string>
    <string name="vacNoun2">Noun</string>
    <string name="vacNoun3">Noun</string>
    <string name="vacPlNoun1">Plural Noun</string>
    <string name="vacPlNoun2">Plural Noun</string>
    <string name="vacPlNoun3">Plural Noun</string>
    <string name="vacPlNoun4">Plural Noun</string>
    <string name="vacGame">Game</string>
    <string name="vacPlant">Plant</string>
    <string name="vacBody">Part of the Body</string>
    <string name="vacPlace">A Place</string>
    <string name="vacNumber">Number</string>
    <string name="vacIngVerb1">Verb ending \"ing\"</string>
    <string name="vacIngVerb2">Verb ending \"ing\"</string>
    <string name="vacIngVerb3">Verb ending \"ing\"</string>
    <string name="vacIngVerb4">Verb ending \"ing\"</string>
    <string name="storyButton">Read Story</string>
    <string name="resetButton">Reset</string>
    <string name="message">A vacation is when you take a trip to some</string>
    <string name="message2">place with your</string>
    <string name="message3">family. Usually you go to some place that is near a/an</string>
    <string name="message4">or up on a/an</string>
    <string name="message5">. A good vacation place is one where you can ride</string>
    <string name="message6">or play</string>
    <string name="message7">or go hunting for</string>
    <string name="message8">. I like to spend my time</string>
    <string name="message9">or</string>
    <string name="message10">. When parents go on a vacation, they spend their time eating three</string>
    <string name="message11">a day, and fathers play golf, and mothers sit around</string>
    <string name="message12">. Last summer, my little brother fell in a/an</string>
    <string name="message13">and got poison</string>
    <string name="message14">all over his</string>
    <string name="message15">. My family is going to go to (the)</string>
    <string name="message16">, and I will practice</string>
    <string name="message17">. Parents need vacations more than kids because parents are always very</string>
    <string name="message18">and because they have to work</string>
    <string name="message19">hours every day all year making enough</string>
    <string name="message20">to pay for the vacation.</string>
</resources>
