<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/MadTheme"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackground">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/heading"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/primaryTextColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.50"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/vacPlNoun4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="109dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="109dp"
                android:ems="10"
                android:hint="@string/vacPlNoun4"
                android:inputType="text"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/primaryTextColor"
                android:textColorHint="@color/secondaryTextColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vacNumber" />

            <EditText
                android:id="@+id/vacAdj2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/vacAdj2"
                android:inputType="text"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/primaryTextColor"
                android:textColorHint="@color/secondaryTextColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/vacAdj1"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <EditText
                android:id="@+id/vacPlNoun3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/vacPlNoun3"
                android:inputType="text"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/primaryTextColor"
                android:textColorHint="@color/secondaryTextColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/vacIngVerb2"
                app:layout_constraintTop_toBottomOf="@+id/vacIngVerb1" />

            <EditText
                android:id="@+id/vacAdj1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:hint="@string/vacAdj1"
                android:inputType="text"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/primaryTextColor"
                android:textColorHint="@color/secondaryTextColor"
                app:layout_constraintEnd_toStartOf="@+id/vacAdj2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <EditText
                android:id="@+id/vacPlNoun2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/vacPlNoun2"
                android:inputType="text"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/primaryTextColor"
                android:textColorHint="@color/secondaryTextColor"
                app:layout_constraintEnd_toStartOf="@+id/vacIngVerb1"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vacPlNoun1" />

            <EditText
                android:id="@+id/vacNoun2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/vacNoun1"
                android:inputType="text"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/primaryTextColor"
                android:textColorHint="@color/secondaryTextColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/vacNoun1"
                app:layout_constraintTop_toBottomOf="@+id/vacAdj2" />

            <EditText
                android:id="@+id/vacIngVerb3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/vacIngVerb3"
                android:inputType="text"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/primaryTextColor"
                android:textColorHint="@color/secondaryTextColor"
                app:layout_constraintEnd_toStartOf="@+id/vacNoun3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vacIngVerb2" />

            <EditText
                android:id="@+id/vacNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/vacNumber"
                android:inputType="text"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/primaryTextColor"
                android:textColorHint="@color/secondaryTextColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/vacAdj3"
                app:layout_constraintTop_toBottomOf="@+id/vacIngVerb4" />

            <EditText
                android:id="@+id/vacPlace"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/vacPlace"
                android:inputType="text"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/primaryTextColor"
                android:textColorHint="@color/secondaryTextColor"
                app:layout_constraintEnd_toStartOf="@+id/vacIngVerb4"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vacPlant" />

            <EditText
                android:id="@+id/vacNoun1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/vacNoun1"
                android:inputType="text"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/primaryTextColor"
                android:textColorHint="@color/secondaryTextColor"
                app:layout_constraintEnd_toStartOf="@+id/vacNoun2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vacAdj1" />

            <EditText
                android:id="@+id/vacGame"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/vacGame"
                android:inputType="text"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/primaryTextColor"
                android:textColorHint="@color/secondaryTextColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/vacPlNoun1"
                app:layout_constraintTop_toBottomOf="@+id/vacNoun2" />

            <EditText
                android:id="@+id/vacPlant"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/vacPlant"
                android:inputType="text"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/primaryTextColor"
                android:textColorHint="@color/secondaryTextColor"
                app:layout_constraintEnd_toStartOf="@+id/vacBody"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vacIngVerb3" />

            <EditText
                android:id="@+id/vacIngVerb4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/vacIngVerb4"
                android:inputType="text"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/primaryTextColor"
                android:textColorHint="@color/secondaryTextColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/vacPlace"
                app:layout_constraintTop_toBottomOf="@+id/vacBody" />

            <EditText
                android:id="@+id/vacIngVerb2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/vacIngVerb2"
                android:inputType="text"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/primaryTextColor"
                android:textColorHint="@color/secondaryTextColor"
                app:layout_constraintEnd_toStartOf="@+id/vacPlNoun3"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vacPlNoun2" />

            <EditText
                android:id="@+id/vacIngVerb1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/vacIngVerb1"
                android:inputType="text"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/primaryTextColor"
                android:textColorHint="@color/secondaryTextColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/vacPlNoun2"
                app:layout_constraintTop_toBottomOf="@+id/vacGame" />

            <EditText
                android:id="@+id/vacAdj3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/vacAdj3"
                android:inputType="text"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/primaryTextColor"
                android:textColorHint="@color/secondaryTextColor"
                app:layout_constraintEnd_toStartOf="@+id/vacNumber"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vacPlace" />

            <EditText
                android:id="@+id/vacBody"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/vacBody"
                android:inputType="text"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/primaryTextColor"
                android:textColorHint="@color/secondaryTextColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/vacPlant"
                app:layout_constraintTop_toBottomOf="@+id/vacNoun3" />

            <EditText
                android:id="@+id/vacPlNoun1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/vacPlNoun1"
                android:inputType="text"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/primaryTextColor"
                android:textColorHint="@color/secondaryTextColor"
                app:layout_constraintEnd_toStartOf="@+id/vacGame"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vacNoun1" />

            <EditText
                android:id="@+id/vacNoun3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/vacNoun3"
                android:inputType="text"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/primaryTextColor"
                android:textColorHint="@color/secondaryTextColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/vacIngVerb3"
                app:layout_constraintTop_toBottomOf="@+id/vacPlNoun3" />

            <TextView
                android:id="@+id/storyView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="24dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/primaryTextColor"
                android:freezesText="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/storyButton"
                app:layout_constraintVertical_bias="0.0" />
<!--          for freezes text:  https://stackoverflow.com/questions/31528528/why-doesnt-textview-with-an-id-automatically-save-its-state-->

            <Button
                android:id="@+id/storyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:onClick="vacationStory"
                android:text="@string/storyButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vacPlNoun4" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>